--- a/lab_12.html
+++ b/lab_12.html
@@ -12,7 +12,6 @@
   <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-31474857-1']);
-   _gaq.push(['_setDomainName', 'gitimmersion.fr']);
    _gaq.push(['_trackPageview']);
    (function() {
      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -37,9 +36,9 @@
     <a href="index.html" id="home_link">Git Immersion</a>
     <nav id="pager">
       <a id="arrow_next" class="arrow" href="lab_13.html">Suivant</a>
-
+  
       <a id="arrow_previous" class="arrow" href="lab_11.html">Précédent</a>
-
+  
   <a id="table_of_contents_link" href="#">Table des matières</a>
   <a id="bookmark_link"><span id="bookmark"></span>Mettre en favori cette partie</a>
   <a id="edgecase_link" href="http://edgecase.com" target="_blank">EdgeCase</a>
@@ -64,10 +63,10 @@ de travail.</li>
 <p class="note"><strong>Note:</strong> Vous vous rappelez avoir défini <code>hist</code> dans votre fichier <code>.gitconfig</code>, n&#8217;est ce pas? Si ce n&#8217;est pas le cas, revoyez le tutoriel sur les alias.</p>
 <h4>En sortie:</h4>
 <pre class="sample">$ git hist
-* 9da17c3 2012-05-06 | Ajout d'un commentaire (HEAD, master) [Jim Weirich]
-* 1f6ac8e 2012-05-06 | Ajouter une valeur par défaut [Jim Weirich]
-* ad21f9e 2012-05-06 | Utilisation de ARGV [Jim Weirich]
-* c3df0aa 2012-05-06 | Mon premier commit [Jim Weirich]</pre>
+* 392ee14 2012-05-07 | Ajout d'un commentaire (HEAD, master) [Jim Weirich]
+* a81dfe7 2012-05-07 | Ajouter une valeur par défaut [Jim Weirich]
+* 9de1147 2012-05-07 | Utilisation de ARGV [Jim Weirich]
+* f5556a9 2012-05-07 | Mon premier commit [Jim Weirich]</pre>
 <p>Examiner la sortie du log et trouver le hash pour le premier commit. Cela doit être la dernière ligne de la sortie de <code>git hist</code>. Utiliser le code hash (les 7 premiers caractères sont suffisants) dans la commande ci-dessous. Ensuite, vérifier le contenu du fichier bonjour.rb.</p>
 <h4>Exécuter:</h4>
 <pre class="instructions">git checkout &lt;hash&gt;
@@ -76,8 +75,8 @@ cat bonjour.rb</pre>
 <p class="note"><strong>Note:</strong> De nombreuses commandes dépendent des valeurs de hash dans le dépôt. Comme vos valeurs de hash vont changer des miennes, chaque fois que vous voyez quelque chose comme &lt;hash&gt; ou &lt;treehash&gt; dans la commande, remplacer la valeur par votre propre valeur de dépôt.</p>
 <p>Vous devriez voir &#8230;</p>
 <h4>En sortie:</h4>
-<pre class="sample">$ git checkout c3df0aa
-Note: checking out 'c3df0aa'.
+<pre class="sample">$ git checkout f5556a9
+Note: checking out 'f5556a9'.
 
 You are in 'detached HEAD' state. You can look around, make experimental
 changes and commit them, and you can discard any commits you make in this
@@ -88,7 +87,7 @@ do so (now or later) by using -b with the checkout command again. Example:
 
   git checkout -b new_branch_name
 
-HEAD is now at c3df0aa... Mon premier commit
+HEAD is now at f5556a9... Mon premier commit
 $ cat bonjour.rb
 puts "Bonjour, Monde"
 </pre>
@@ -101,7 +100,7 @@ cat bonjour.rb</pre>
 <p>Vous devriez voir &#8230;</p>
 <h4>En sortie:</h4>
 <pre class="sample">$ git checkout master
-Previous HEAD position was c3df0aa... Mon premier commit
+Previous HEAD position was f5556a9... Mon premier commit
 Switched to branch 'master'
 $ cat bonjour.rb
 # L'argument par défaut est Monde
@@ -150,8 +149,8 @@ puts "Bonjour, #{nom}!"
           <li id="lab_30_link" data-lab-id="30"><a href="lab_30.html"><span>30:</span> Résolution des conflits</a></li>
           <li id="lab_31_link" data-lab-id="31"><a href="lab_31.html"><span>31:</span> Rebase VS Fusion (merge)</a></li>
           <li id="lab_32_link" data-lab-id="32"><a href="lab_32.html"><span>32:</span> Réinitialiser la branche Saluer</a></li>
-          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Resetting the Master Branch</a></li>
-          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebasing</a></li>
+          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Réinitialiser la branche Master</a></li>
+          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebaser</a></li>
           <li id="lab_35_link" data-lab-id="35"><a href="lab_35.html"><span>35:</span> Fusionner dans la branche master</a></li>
           <li id="lab_36_link" data-lab-id="36"><a href="lab_36.html"><span>36:</span> Dépôts multiples</a></li>
           <li id="lab_37_link" data-lab-id="37"><a href="lab_37.html"><span>37:</span> Cloner des dépôts</a></li>
