--- a/lab_30.html
+++ b/lab_30.html
@@ -12,7 +12,6 @@
   <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-31474857-1']);
-   _gaq.push(['_setDomainName', 'gitimmersion.fr']);
    _gaq.push(['_trackPageview']);
    (function() {
      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -37,9 +36,9 @@
     <a href="index.html" id="home_link">Git Immersion</a>
     <nav id="pager">
       <a id="arrow_next" class="arrow" href="lab_31.html">Suivant</a>
-
+  
       <a id="arrow_previous" class="arrow" href="lab_29.html">Précédent</a>
-
+  
   <a id="table_of_contents_link" href="#">Table des matières</a>
   <a id="bookmark_link"><span id="bookmark"></span>Mettre en favori cette partie</a>
   <a id="edgecase_link" href="http://edgecase.com" target="_blank">EdgeCase</a>
@@ -59,7 +58,7 @@
 <h2>Fusionner master dans saluer <em>01</em></h2>
 <p>Maintenant, retournons dans la branche saluer et essayons de fusionner master.</p>
 <h4>Exécuter:</h4>
-<pre class="instructions">git checkout greet
+<pre class="instructions">git checkout saluer
 git merge master</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git checkout saluer
@@ -107,8 +106,7 @@ git commit -m "La fusion depuis master corrige le conflit"</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git add lib/bonjour.rb
 $ git commit -m "La fusion depuis master corrige le conflit"
-[master 45413d3] La fusion depuis master corrige le conflit
- 1 files changed, 4 insertions(+), 1 deletions(-)
+[saluer a4aa958] La fusion depuis master corrige le conflit
 </pre>
 <h2>Fusion avancée <em>04</em></h2>
 <p>Git ne propose aucun outil graphique de fusion, mais il fonctionnera très bien avec n&#8217;importe quel outil tiers de fusion que vous souhaiteriez utiliser. Voir <a href="http://onestepback.org/index.cgi/Tech/Git/UsingP4MergeWithGit.red">http://onestepback.org/index.cgi/Tech/Git/UsingP4MergeWithGit.red</a> pour une description de l&#8217;utilisation de l&#8217;outil de fusion Perforce avec git.</p>
@@ -152,8 +150,8 @@ $ git commit -m "La fusion depuis master corrige le conflit"
           <li id="lab_30_link" data-lab-id="30"><a href="lab_30.html"><span>30:</span> Résolution des conflits</a></li>
           <li id="lab_31_link" data-lab-id="31"><a href="lab_31.html"><span>31:</span> Rebase VS Fusion (merge)</a></li>
           <li id="lab_32_link" data-lab-id="32"><a href="lab_32.html"><span>32:</span> Réinitialiser la branche Saluer</a></li>
-          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Resetting the Master Branch</a></li>
-          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebasing</a></li>
+          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Réinitialiser la branche Master</a></li>
+          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebaser</a></li>
           <li id="lab_35_link" data-lab-id="35"><a href="lab_35.html"><span>35:</span> Fusionner dans la branche master</a></li>
           <li id="lab_36_link" data-lab-id="36"><a href="lab_36.html"><span>36:</span> Dépôts multiples</a></li>
           <li id="lab_37_link" data-lab-id="37"><a href="lab_37.html"><span>37:</span> Cloner des dépôts</a></li>
