--- a/lab_35.html
+++ b/lab_35.html
@@ -12,7 +12,6 @@
   <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-31474857-1']);
-   _gaq.push(['_setDomainName', 'gitimmersion.fr']);
    _gaq.push(['_trackPageview']);
    (function() {
      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -37,9 +36,9 @@
     <a href="index.html" id="home_link">Git Immersion</a>
     <nav id="pager">
       <a id="arrow_next" class="arrow" href="lab_36.html">Suivant</a>
-
+  
       <a id="arrow_previous" class="arrow" href="lab_34.html">Précédent</a>
-
+  
   <a id="table_of_contents_link" href="#">Table des matières</a>
   <a id="bookmark_link"><span id="bookmark"></span>Mettre en favori cette partie</a>
   <a id="edgecase_link" href="http://edgecase.com" target="_blank">EdgeCase</a>
@@ -54,37 +53,46 @@
     <h1 class="lab_title"><em>lab 35</em>  Fusionner dans la branche master</h1>
 <h3>Buts</h3>
 <ul>
-	<li>Nous avons gardé notre branche greet à jour avec master (via rebase),<br />
-maintenant, il est temps de fusionner les changements de greet dans la<br />
+	<li>Nous avons gardé notre branche saluer à jour avec master (via rebase),<br />
+maintenant, il est temps de fusionner les changements de saluer dans la<br />
 branche master.</li>
 </ul>
-<h2>Fusionner greet dans master <em>01</em></h2>
+<h2>Fusionner saluer dans master <em>01</em></h2>
 <h4>Exécuter:</h4>
 <pre class="instructions">git checkout master
-git merge greet</pre>
+git merge saluer</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git checkout master
 Switched to branch 'master'
 $
-$ git merge greet
-fatal: 'greet' does not point to a commit
+$ git merge saluer
+Updating fe9164f..c8f930f
+Fast-forward
+ Rakefile            |    2 +-
+ lib/bonjour.rb      |    6 ++++--
+ lib/faireunsalut.rb |    8 ++++++++
+ 3 files changed, 13 insertions(+), 3 deletions(-)
+ create mode 100644 lib/faireunsalut.rb
 </pre>
-<p>Because the head of master is a direct ancestor of the head of the greet branch, git is able to do a fast-forward merge.  When fast-forwarding, the branch pointer is simply moved forward to point to the same commit as the greeter branch.</p>
-<p>There will never be conflicts in a fast-forward merge.</p>
+<p>Comme le head de master est une ancêtre direct du head de la branche saluer, git est capable de faire un merge en &#8220;avance rapide&#8221;. Quand on fait l&#8217;avance rapide, le pointeur de la branche est simplement déplacé en avant pour pointer vers le même commit que pour la branche faireunsalut.</p>
+<p>Il n&#8217;y aura jamais de conflits dans un merge en &#8220;avance rapide&#8221;.</p>
 <h2>Examiner les logs <em>02</em></h2>
 <h4>Exécuter:</h4>
 <pre class="instructions">git hist</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git hist
-* 62d4c28 2012-05-06 | Ajout d'un LISEZMOI (HEAD, master) [Jim Weirich]
-* b33d944 2012-05-06 | Ajout d'un Rakefile [Jim Weirich]
-* d2d5251 2012-05-06 | Déplacement de bonjour.rb dans lib [Jim Weirich]
-* 65d4697 2012-05-06 | Add an author/email comment [Jim Weirich]
-* 9da17c3 2012-05-06 | Ajout d'un commentaire (v1) [Jim Weirich]
-* 1f6ac8e 2012-05-06 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
-* ad21f9e 2012-05-06 | Utilisation de ARGV [Jim Weirich]
-* c3df0aa 2012-05-06 | Mon premier commit [Jim Weirich]</pre>
-<p>Les branches greet et master sont maintenant identiques.</p>
+* c8f930f 2012-05-07 | Rakefile mis à jour (HEAD, saluer, master) [Jim Weirich]
+* 4a01131 2012-05-07 | bonjour utilise Faireunsalut [Jim Weirich]
+* edbb2f8 2012-05-07 | Ajout de la classe Faireunsalut [Jim Weirich]
+* fe9164f 2012-05-07 | Ajout d'un LISEZMOI [Jim Weirich]
+* 50288bc 2012-05-07 | Ajout d'un Rakefile [Jim Weirich]
+* fdbaff5 2012-05-07 | Déplacement de bonjour.rb dans lib [Jim Weirich]
+* 0eca227 2012-05-07 | Add an author/email comment [Jim Weirich]
+* 392ee14 2012-05-07 | Ajout d'un commentaire (v1) [Jim Weirich]
+* a81dfe7 2012-05-07 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
+* 9de1147 2012-05-07 | Utilisation de ARGV [Jim Weirich]
+* f5556a9 2012-05-07 | Mon premier commit [Jim Weirich]</pre>
+<p>Les branches saluer et master sont maintenant identiques.</p>
   </div>
 
   <div id="index">
@@ -125,8 +133,8 @@ fatal: 'greet' does not point to a commit
           <li id="lab_30_link" data-lab-id="30"><a href="lab_30.html"><span>30:</span> Résolution des conflits</a></li>
           <li id="lab_31_link" data-lab-id="31"><a href="lab_31.html"><span>31:</span> Rebase VS Fusion (merge)</a></li>
           <li id="lab_32_link" data-lab-id="32"><a href="lab_32.html"><span>32:</span> Réinitialiser la branche Saluer</a></li>
-          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Resetting the Master Branch</a></li>
-          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebasing</a></li>
+          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Réinitialiser la branche Master</a></li>
+          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebaser</a></li>
           <li id="lab_35_link" data-lab-id="35"><a href="lab_35.html"><span>35:</span> Fusionner dans la branche master</a></li>
           <li id="lab_36_link" data-lab-id="36"><a href="lab_36.html"><span>36:</span> Dépôts multiples</a></li>
           <li id="lab_37_link" data-lab-id="37"><a href="lab_37.html"><span>37:</span> Cloner des dépôts</a></li>
