--- a/lab_16.html
+++ b/lab_16.html
@@ -12,7 +12,6 @@
   <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-31474857-1']);
-   _gaq.push(['_setDomainName', 'gitimmersion.fr']);
    _gaq.push(['_trackPageview']);
    (function() {
      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -37,9 +36,9 @@
     <a href="index.html" id="home_link">Git Immersion</a>
     <nav id="pager">
       <a id="arrow_next" class="arrow" href="lab_17.html">Suivant</a>
-
+  
       <a id="arrow_previous" class="arrow" href="lab_15.html">Précédent</a>
-
+  
   <a id="table_of_contents_link" href="#">Table des matières</a>
   <a id="bookmark_link"><span id="bookmark"></span>Mettre en favori cette partie</a>
   <a id="edgecase_link" href="http://edgecase.com" target="_blank">EdgeCase</a>
@@ -79,7 +78,7 @@ git commit -m "Oups, nous  ne voulions pas ce commit"</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git revert HEAD --no-edit
 Finished one revert.
-[master 5cc6a21] Revert "Oups, nous  ne voulions pas ce commit"
+[master 21a19c5] Revert "Oups, nous  ne voulions pas ce commit"
  1 files changed, 1 insertions(+), 1 deletions(-)
 </pre>
 <p>Comme nous étions en train d&#8217;annuler le dernier commit que nous avions fait, nous avons été capable d&#8217;utiliser <code>HEAD</code> comme argument pour annuler. Nous pouvons annuler n&#8217;importe quel commit de manière arbitraire plus ancien dans l&#8217;historique en spécifiant simplement la valeur de son hash.</p>
@@ -90,12 +89,12 @@ Finished one revert.
 <pre class="instructions">git hist</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git hist
-* 5cc6a21 2012-05-06 | Revert "Oups, nous  ne voulions pas ce commit" (HEAD, master) [Jim Weirich]
-* 905d6e9 2012-05-06 | Oups, nous  ne voulions pas ce commit [Jim Weirich]
-* 9da17c3 2012-05-06 | Ajout d'un commentaire (v1) [Jim Weirich]
-* 1f6ac8e 2012-05-06 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
-* ad21f9e 2012-05-06 | Utilisation de ARGV [Jim Weirich]
-* c3df0aa 2012-05-06 | Mon premier commit [Jim Weirich]</pre>
+* 21a19c5 2012-05-07 | Revert "Oups, nous  ne voulions pas ce commit" (HEAD, master) [Jim Weirich]
+* 96001a0 2012-05-07 | Oups, nous  ne voulions pas ce commit [Jim Weirich]
+* 392ee14 2012-05-07 | Ajout d'un commentaire (v1) [Jim Weirich]
+* a81dfe7 2012-05-07 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
+* 9de1147 2012-05-07 | Utilisation de ARGV [Jim Weirich]
+* f5556a9 2012-05-07 | Mon premier commit [Jim Weirich]</pre>
 <p>Cette technique fonctionnera avec n&#8217;importe quel commit (même si vous allez peut être devoir résoudre des conflits). C&#8217;est sûr pour être utilisé même sur les branches qui sont partagées sur des dépôts distants.</p>
 <h2>Quoi de plus <em>05</em></h2>
 <p>Maintenant, allons regarder une technique qui peut être utilisée pour enlever les commits les plus récents de l&#8217;historique du dépôt.</p>
@@ -139,8 +138,8 @@ Finished one revert.
           <li id="lab_30_link" data-lab-id="30"><a href="lab_30.html"><span>30:</span> Résolution des conflits</a></li>
           <li id="lab_31_link" data-lab-id="31"><a href="lab_31.html"><span>31:</span> Rebase VS Fusion (merge)</a></li>
           <li id="lab_32_link" data-lab-id="32"><a href="lab_32.html"><span>32:</span> Réinitialiser la branche Saluer</a></li>
-          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Resetting the Master Branch</a></li>
-          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebasing</a></li>
+          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Réinitialiser la branche Master</a></li>
+          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebaser</a></li>
           <li id="lab_35_link" data-lab-id="35"><a href="lab_35.html"><span>35:</span> Fusionner dans la branche master</a></li>
           <li id="lab_36_link" data-lab-id="36"><a href="lab_36.html"><span>36:</span> Dépôts multiples</a></li>
           <li id="lab_37_link" data-lab-id="37"><a href="lab_37.html"><span>37:</span> Cloner des dépôts</a></li>
