--- a/lab_27.html
+++ b/lab_27.html
@@ -12,7 +12,6 @@
   <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-31474857-1']);
-   _gaq.push(['_setDomainName', 'gitimmersion.fr']);
    _gaq.push(['_trackPageview']);
    (function() {
      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -37,9 +36,9 @@
     <a href="index.html" id="home_link">Git Immersion</a>
     <nav id="pager">
       <a id="arrow_next" class="arrow" href="lab_28.html">Suivant</a>
-
+  
       <a id="arrow_previous" class="arrow" href="lab_26.html">Précédent</a>
-
+  
   <a id="table_of_contents_link" href="#">Table des matières</a>
   <a id="bookmark_link"><span id="bookmark"></span>Mettre en favori cette partie</a>
   <a id="edgecase_link" href="http://edgecase.com" target="_blank">EdgeCase</a>
@@ -62,18 +61,18 @@
 <pre class="instructions">git hist --all</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git hist --all
-* 62d4c28 2012-05-06 | Ajout d'un LISEZMOI (HEAD, master) [Jim Weirich]
-| * 9c97fdd 2012-05-06 | Rakefile mis à jour (saluer) [Jim Weirich]
-| * 5c2f6d0 2012-05-06 | bonjour utiliser Faireunsalut [Jim Weirich]
-| * 1aea98c 2012-05-06 | Ajout de la classe Faireunsalut [Jim Weirich]
-|/
-* b33d944 2012-05-06 | Ajout d'un Rakefile [Jim Weirich]
-* d2d5251 2012-05-06 | Déplacement de bonjour.rb dans lib [Jim Weirich]
-* 65d4697 2012-05-06 | Add an author/email comment [Jim Weirich]
-* 9da17c3 2012-05-06 | Ajout d'un commentaire (v1) [Jim Weirich]
-* 1f6ac8e 2012-05-06 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
-* ad21f9e 2012-05-06 | Utilisation de ARGV [Jim Weirich]
-* c3df0aa 2012-05-06 | Mon premier commit [Jim Weirich]</pre>
+* fe9164f 2012-05-07 | Ajout d'un LISEZMOI (HEAD, master) [Jim Weirich]
+| * 43ab17e 2012-05-07 | Rakefile mis à jour (saluer) [Jim Weirich]
+| * 868fc3c 2012-05-07 | bonjour utilise Faireunsalut [Jim Weirich]
+| * d9d726a 2012-05-07 | Ajout de la classe Faireunsalut [Jim Weirich]
+|/  
+* 50288bc 2012-05-07 | Ajout d'un Rakefile [Jim Weirich]
+* fdbaff5 2012-05-07 | Déplacement de bonjour.rb dans lib [Jim Weirich]
+* 0eca227 2012-05-07 | Add an author/email comment [Jim Weirich]
+* 392ee14 2012-05-07 | Ajout d'un commentaire (v1) [Jim Weirich]
+* a81dfe7 2012-05-07 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
+* 9de1147 2012-05-07 | Utilisation de ARGV [Jim Weirich]
+* f5556a9 2012-05-07 | Mon premier commit [Jim Weirich]</pre>
 <p>Voici notre première chance de voir l&#8217;option <code>--graph</code> de <code>git hist</code> en action. L&#8217;ajout de l&#8217;option <code>--graph</code> à <code>git log</code> lui permet de dessiner l&#8217;arbre de commit en utilisant de simples caractères <span class="caps">ASCII</span>. Nous pouvons voir les deux branches (saluer et master), et que la branche master est le <span class="caps">HEAD</span> courant. L&#8217;ancêtre commun des deux branches est la branche &#8220;Ajout d&#8217;un Rakefile&#8221;.</p>
 <p>L&#8217;option <code>--all</code> nous permet de nous assurer que nous voyons toutes les branches. Le fonctionnement par défaut est de montrer seulement la branche courante.</p>
   </div>
@@ -116,8 +115,8 @@
           <li id="lab_30_link" data-lab-id="30"><a href="lab_30.html"><span>30:</span> Résolution des conflits</a></li>
           <li id="lab_31_link" data-lab-id="31"><a href="lab_31.html"><span>31:</span> Rebase VS Fusion (merge)</a></li>
           <li id="lab_32_link" data-lab-id="32"><a href="lab_32.html"><span>32:</span> Réinitialiser la branche Saluer</a></li>
-          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Resetting the Master Branch</a></li>
-          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebasing</a></li>
+          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Réinitialiser la branche Master</a></li>
+          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebaser</a></li>
           <li id="lab_35_link" data-lab-id="35"><a href="lab_35.html"><span>35:</span> Fusionner dans la branche master</a></li>
           <li id="lab_36_link" data-lab-id="36"><a href="lab_36.html"><span>36:</span> Dépôts multiples</a></li>
           <li id="lab_37_link" data-lab-id="37"><a href="lab_37.html"><span>37:</span> Cloner des dépôts</a></li>
