--- a/lab_32.html
+++ b/lab_32.html
@@ -12,7 +12,6 @@
   <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-31474857-1']);
-   _gaq.push(['_setDomainName', 'gitimmersion.fr']);
    _gaq.push(['_trackPageview']);
    (function() {
      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -37,9 +36,9 @@
     <a href="index.html" id="home_link">Git Immersion</a>
     <nav id="pager">
       <a id="arrow_next" class="arrow" href="lab_33.html">Suivant</a>
-
+  
       <a id="arrow_previous" class="arrow" href="lab_31.html">Précédent</a>
-
+  
   <a id="table_of_contents_link" href="#">Table des matières</a>
   <a id="bookmark_link"><span id="bookmark"></span>Mettre en favori cette partie</a>
   <a id="edgecase_link" href="http://edgecase.com" target="_blank">EdgeCase</a>
@@ -64,28 +63,32 @@
 git hist</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git checkout saluer
-Switched to branch 'saluer'
+Already on 'saluer'
 $ git hist
-*   3ced745 2012-05-06 | Merge branch 'master' into saluer (HEAD, saluer) [Jim Weirich]
-|\
-| * 62d4c28 2012-05-06 | Ajout d'un LISEZMOI [Jim Weirich]
-* | 9c97fdd 2012-05-06 | Rakefile mis à jour [Jim Weirich]
-* | 5c2f6d0 2012-05-06 | bonjour utiliser Faireunsalut [Jim Weirich]
-* | 1aea98c 2012-05-06 | Ajout de la classe Faireunsalut [Jim Weirich]
-|/
-* b33d944 2012-05-06 | Ajout d'un Rakefile [Jim Weirich]
-* d2d5251 2012-05-06 | Déplacement de bonjour.rb dans lib [Jim Weirich]
-* 65d4697 2012-05-06 | Add an author/email comment [Jim Weirich]
-* 9da17c3 2012-05-06 | Ajout d'un commentaire (v1) [Jim Weirich]
-* 1f6ac8e 2012-05-06 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
-* ad21f9e 2012-05-06 | Utilisation de ARGV [Jim Weirich]
-* c3df0aa 2012-05-06 | Mon premier commit [Jim Weirich]</pre>
-<p>C&#8217;est un peu dur à lire, mais en regardant dans les données, nous voyons que le commit &#8220;Rakefile mis à jour&#8221; était le dernier commit sur la branche saluer avant la fusion. Réinitialisons la branche greet à ce commit.</p>
+*   a4aa958 2012-05-07 | La fusion depuis master corrige le conflit (HEAD, saluer) [Jim Weirich]
+|\  
+| * 2bd7c9b 2012-05-07 | Rendre interactif (master) [Jim Weirich]
+* |   197c954 2012-05-07 | Merge branch 'master' into saluer [Jim Weirich]
+|\ \  
+| |/  
+| * fe9164f 2012-05-07 | Ajout d'un LISEZMOI [Jim Weirich]
+* | 43ab17e 2012-05-07 | Rakefile mis à jour [Jim Weirich]
+* | 868fc3c 2012-05-07 | bonjour utilise Faireunsalut [Jim Weirich]
+* | d9d726a 2012-05-07 | Ajout de la classe Faireunsalut [Jim Weirich]
+|/  
+* 50288bc 2012-05-07 | Ajout d'un Rakefile [Jim Weirich]
+* fdbaff5 2012-05-07 | Déplacement de bonjour.rb dans lib [Jim Weirich]
+* 0eca227 2012-05-07 | Add an author/email comment [Jim Weirich]
+* 392ee14 2012-05-07 | Ajout d'un commentaire (v1) [Jim Weirich]
+* a81dfe7 2012-05-07 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
+* 9de1147 2012-05-07 | Utilisation de ARGV [Jim Weirich]
+* f5556a9 2012-05-07 | Mon premier commit [Jim Weirich]</pre>
+<p>C&#8217;est un peu dur à lire, mais en regardant dans les données, nous voyons que le commit &#8220;Rakefile mis à jour&#8221; était le dernier commit sur la branche saluer avant la fusion. Réinitialisons la branche saluer à ce commit.</p>
 <h4>Exécuter:</h4>
 <pre class="instructions">git reset --hard &lt;hash&gt;</pre>
 <h4>En sortie:</h4>
-<pre class="sample">$ git reset --hard 9c97fdd
-HEAD is now at 9c97fdd Rakefile mis à jour
+<pre class="sample">$ git reset --hard 43ab17e
+HEAD is now at 43ab17e Rakefile mis à jour
 </pre>
 <h2>Vérifier la branche. <em>02</em></h2>
 <p>Regardez dans le log de la branche saluer. Nous n&#8217;avons plus les commits de fusion dans l&#8217;historique.</p>
@@ -93,20 +96,19 @@ HEAD is now at 9c97fdd Rakefile mis à jour
 <pre class="instructions">git hist --all</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git hist --all
-* 45413d3 2012-05-06 | La fusion depuis master corrige le conflit (master) [Jim Weirich]
-* e59aeaa 2012-05-06 | Rendre interactif [Jim Weirich]
-* 62d4c28 2012-05-06 | Ajout d'un LISEZMOI [Jim Weirich]
-| * 9c97fdd 2012-05-06 | Rakefile mis à jour (HEAD, saluer) [Jim Weirich]
-| * 5c2f6d0 2012-05-06 | bonjour utiliser Faireunsalut [Jim Weirich]
-| * 1aea98c 2012-05-06 | Ajout de la classe Faireunsalut [Jim Weirich]
-|/
-* b33d944 2012-05-06 | Ajout d'un Rakefile [Jim Weirich]
-* d2d5251 2012-05-06 | Déplacement de bonjour.rb dans lib [Jim Weirich]
-* 65d4697 2012-05-06 | Add an author/email comment [Jim Weirich]
-* 9da17c3 2012-05-06 | Ajout d'un commentaire (v1) [Jim Weirich]
-* 1f6ac8e 2012-05-06 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
-* ad21f9e 2012-05-06 | Utilisation de ARGV [Jim Weirich]
-* c3df0aa 2012-05-06 | Mon premier commit [Jim Weirich]</pre>
+* 2bd7c9b 2012-05-07 | Rendre interactif (master) [Jim Weirich]
+* fe9164f 2012-05-07 | Ajout d'un LISEZMOI [Jim Weirich]
+| * 43ab17e 2012-05-07 | Rakefile mis à jour (HEAD, saluer) [Jim Weirich]
+| * 868fc3c 2012-05-07 | bonjour utilise Faireunsalut [Jim Weirich]
+| * d9d726a 2012-05-07 | Ajout de la classe Faireunsalut [Jim Weirich]
+|/  
+* 50288bc 2012-05-07 | Ajout d'un Rakefile [Jim Weirich]
+* fdbaff5 2012-05-07 | Déplacement de bonjour.rb dans lib [Jim Weirich]
+* 0eca227 2012-05-07 | Add an author/email comment [Jim Weirich]
+* 392ee14 2012-05-07 | Ajout d'un commentaire (v1) [Jim Weirich]
+* a81dfe7 2012-05-07 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
+* 9de1147 2012-05-07 | Utilisation de ARGV [Jim Weirich]
+* f5556a9 2012-05-07 | Mon premier commit [Jim Weirich]</pre>
   </div>
 
   <div id="index">
@@ -147,8 +149,8 @@ HEAD is now at 9c97fdd Rakefile mis à jour
           <li id="lab_30_link" data-lab-id="30"><a href="lab_30.html"><span>30:</span> Résolution des conflits</a></li>
           <li id="lab_31_link" data-lab-id="31"><a href="lab_31.html"><span>31:</span> Rebase VS Fusion (merge)</a></li>
           <li id="lab_32_link" data-lab-id="32"><a href="lab_32.html"><span>32:</span> Réinitialiser la branche Saluer</a></li>
-          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Resetting the Master Branch</a></li>
-          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebasing</a></li>
+          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Réinitialiser la branche Master</a></li>
+          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebaser</a></li>
           <li id="lab_35_link" data-lab-id="35"><a href="lab_35.html"><span>35:</span> Fusionner dans la branche master</a></li>
           <li id="lab_36_link" data-lab-id="36"><a href="lab_36.html"><span>36:</span> Dépôts multiples</a></li>
           <li id="lab_37_link" data-lab-id="37"><a href="lab_37.html"><span>37:</span> Cloner des dépôts</a></li>
