--- a/lab_33.html
+++ b/lab_33.html
@@ -12,7 +12,6 @@
   <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-31474857-1']);
-   _gaq.push(['_setDomainName', 'gitimmersion.fr']);
    _gaq.push(['_trackPageview']);
    (function() {
      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -37,61 +36,60 @@
     <a href="index.html" id="home_link">Git Immersion</a>
     <nav id="pager">
       <a id="arrow_next" class="arrow" href="lab_34.html">Suivant</a>
-
+  
       <a id="arrow_previous" class="arrow" href="lab_32.html">Précédent</a>
-
+  
   <a id="table_of_contents_link" href="#">Table des matières</a>
   <a id="bookmark_link"><span id="bookmark"></span>Mettre en favori cette partie</a>
   <a id="edgecase_link" href="http://edgecase.com" target="_blank">EdgeCase</a>
 </nav>
 
 
-    <h1 class="lab_title"><em>lab 33</em> Resetting the Master Branch</h1>
+    <h1 class="lab_title"><em>lab 33</em> Réinitialiser la branche Master</h1>
     <a href="http://edgecase.com" target=_blank" id="other_edgecase_link">EdgeCase</a>
   </header>
 
   <div id="main_content">
-    <h1 class="lab_title"><em>lab 33</em>  Resetting the Master Branch</h1>
-<h3>Goals</h3>
+    <h1 class="lab_title"><em>lab 33</em>  Réinitialiser la branche Master</h1>
+<h3>Buts</h3>
 <ul>
-	<li>Reset the master branch to the point before the conflicting commit.</li>
+	<li>Réinitialiser la branche master au point avant le commit conflictuel.</li>
 </ul>
-<h2>Reset the master branch <em>01</em></h2>
-<p>When we added the interactive mode to the master branch, we made a change that conflicted with changes in the greet branch. Let&#8217;s rewind the master branch to a point before the conflicting change.  This allows us to demonstrate the rebase command without worrying about conflicts.</p>
+<h2>Réinitialiser la branche master <em>01</em></h2>
+<p>Quand nous avons ajouté le mode interactif dans la branche master, nous avons fait un changement qui rentre en conflit avec les changements dans la branche saluer. &#8220;Rembobinons&#8221; la branche master au point avantle changement conflictuel. Cela va nous permettre de faire une démonstration de la commande rebase sans s&#8217;inquiéter des conflits.</p>
 <h4>Exécuter:</h4>
 <pre class="instructions">git checkout master
 git hist</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git hist
-* 45413d3 2012-05-06 | La fusion depuis master corrige le conflit (HEAD, master) [Jim Weirich]
-* e59aeaa 2012-05-06 | Rendre interactif [Jim Weirich]
-* 62d4c28 2012-05-06 | Ajout d'un LISEZMOI [Jim Weirich]
-* b33d944 2012-05-06 | Ajout d'un Rakefile [Jim Weirich]
-* d2d5251 2012-05-06 | Déplacement de bonjour.rb dans lib [Jim Weirich]
-* 65d4697 2012-05-06 | Add an author/email comment [Jim Weirich]
-* 9da17c3 2012-05-06 | Ajout d'un commentaire (v1) [Jim Weirich]
-* 1f6ac8e 2012-05-06 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
-* ad21f9e 2012-05-06 | Utilisation de ARGV [Jim Weirich]
-* c3df0aa 2012-05-06 | Mon premier commit [Jim Weirich]</pre>
-<p>The &#8216;Ajout d&#8217;un LISEZMOI&#8217; commit is the one directly before the conflicting interactive mode.  We will reset the master branch to &#8216;Ajout d&#8217;un LISEZMOI&#8217; branch.</p>
+* 2bd7c9b 2012-05-07 | Rendre interactif (HEAD, master) [Jim Weirich]
+* fe9164f 2012-05-07 | Ajout d'un LISEZMOI [Jim Weirich]
+* 50288bc 2012-05-07 | Ajout d'un Rakefile [Jim Weirich]
+* fdbaff5 2012-05-07 | Déplacement de bonjour.rb dans lib [Jim Weirich]
+* 0eca227 2012-05-07 | Add an author/email comment [Jim Weirich]
+* 392ee14 2012-05-07 | Ajout d'un commentaire (v1) [Jim Weirich]
+* a81dfe7 2012-05-07 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
+* 9de1147 2012-05-07 | Utilisation de ARGV [Jim Weirich]
+* f5556a9 2012-05-07 | Mon premier commit [Jim Weirich]</pre>
+<p>Le commit &#8216;Ajout d&#8217;un LISEZMOI&#8217; est celui qui est directement avant le mode interactif conflictuel. Nous allons réinitialiser la branche master au commit &#8216;Ajout d&#8217;un LISEZMOI&#8217;.</p>
 <h4>Exécuter:</h4>
 <pre class="instructions">git reset --hard &lt;hash&gt;
 git hist --all</pre>
-<p>Review the log.  It should look like the repository has been wound back in time to the point before we merged anything.</p>
+<p>Examiner le log. Cela devrait ressembler comme si on avait rembobiné le dépôt dans le temps au point avant la fusion de quoi que ce soit.</p>
 <h4>En sortie:</h4>
 <pre class="sample">$ git hist --all
-* 62d4c28 2012-05-06 | Ajout d'un LISEZMOI (HEAD, master) [Jim Weirich]
-| * 9c97fdd 2012-05-06 | Rakefile mis à jour (saluer) [Jim Weirich]
-| * 5c2f6d0 2012-05-06 | bonjour utiliser Faireunsalut [Jim Weirich]
-| * 1aea98c 2012-05-06 | Ajout de la classe Faireunsalut [Jim Weirich]
-|/
-* b33d944 2012-05-06 | Ajout d'un Rakefile [Jim Weirich]
-* d2d5251 2012-05-06 | Déplacement de bonjour.rb dans lib [Jim Weirich]
-* 65d4697 2012-05-06 | Add an author/email comment [Jim Weirich]
-* 9da17c3 2012-05-06 | Ajout d'un commentaire (v1) [Jim Weirich]
-* 1f6ac8e 2012-05-06 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
-* ad21f9e 2012-05-06 | Utilisation de ARGV [Jim Weirich]
-* c3df0aa 2012-05-06 | Mon premier commit [Jim Weirich]</pre>
+* fe9164f 2012-05-07 | Ajout d'un LISEZMOI (HEAD, master) [Jim Weirich]
+| * 43ab17e 2012-05-07 | Rakefile mis à jour (saluer) [Jim Weirich]
+| * 868fc3c 2012-05-07 | bonjour utilise Faireunsalut [Jim Weirich]
+| * d9d726a 2012-05-07 | Ajout de la classe Faireunsalut [Jim Weirich]
+|/  
+* 50288bc 2012-05-07 | Ajout d'un Rakefile [Jim Weirich]
+* fdbaff5 2012-05-07 | Déplacement de bonjour.rb dans lib [Jim Weirich]
+* 0eca227 2012-05-07 | Add an author/email comment [Jim Weirich]
+* 392ee14 2012-05-07 | Ajout d'un commentaire (v1) [Jim Weirich]
+* a81dfe7 2012-05-07 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
+* 9de1147 2012-05-07 | Utilisation de ARGV [Jim Weirich]
+* f5556a9 2012-05-07 | Mon premier commit [Jim Weirich]</pre>
   </div>
 
   <div id="index">
@@ -132,8 +130,8 @@ git hist --all</pre>
           <li id="lab_30_link" data-lab-id="30"><a href="lab_30.html"><span>30:</span> Résolution des conflits</a></li>
           <li id="lab_31_link" data-lab-id="31"><a href="lab_31.html"><span>31:</span> Rebase VS Fusion (merge)</a></li>
           <li id="lab_32_link" data-lab-id="32"><a href="lab_32.html"><span>32:</span> Réinitialiser la branche Saluer</a></li>
-          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Resetting the Master Branch</a></li>
-          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebasing</a></li>
+          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Réinitialiser la branche Master</a></li>
+          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebaser</a></li>
           <li id="lab_35_link" data-lab-id="35"><a href="lab_35.html"><span>35:</span> Fusionner dans la branche master</a></li>
           <li id="lab_36_link" data-lab-id="36"><a href="lab_36.html"><span>36:</span> Dépôts multiples</a></li>
           <li id="lab_37_link" data-lab-id="37"><a href="lab_37.html"><span>37:</span> Cloner des dépôts</a></li>
