--- a/lab_40.html
+++ b/lab_40.html
@@ -12,7 +12,6 @@
   <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-31474857-1']);
-   _gaq.push(['_setDomainName', 'gitimmersion.fr']);
    _gaq.push(['_trackPageview']);
    (function() {
      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -37,9 +36,9 @@
     <a href="index.html" id="home_link">Git Immersion</a>
     <nav id="pager">
       <a id="arrow_next" class="arrow" href="lab_41.html">Suivant</a>
-
+  
       <a id="arrow_previous" class="arrow" href="lab_39.html">Précédent</a>
-
+  
   <a id="table_of_contents_link" href="#">Table des matières</a>
   <a id="bookmark_link"><span id="bookmark"></span>Mettre en favori cette partie</a>
   <a id="edgecase_link" href="http://edgecase.com" target="_blank">EdgeCase</a>
@@ -63,7 +62,7 @@
 <pre class="sample">$ git branch
 * master
 </pre>
-<p>C&#8217;est ça, seule la  branche master est listée. Où est la branche greet ? La commande <strong>git</strong> <strong>branch</strong> liste seulement les branches locales par défaut.</p>
+<p>C&#8217;est ça, seule la  branche master est listée. Où est la branche saluer ? La commande <strong>git</strong> <strong>branch</strong> liste seulement les branches locales par défaut.</p>
 <h2>Lister les branches distantes <em>01</em></h2>
 <p>Essayer ceci pour voir toutes les branches:</p>
 <h4>Exécuter:</h4>
@@ -75,7 +74,7 @@
   remotes/origin/master
   remotes/origin/saluer
 </pre>
-<p>Git a tous les commits du dépôt original, mais les branches dans le dépôt distant ne sont pas traitées comme des branches locales ici. Si nous voulons notre propre branche <strong>greet</strong>, nous devons la créer nous-même. Nous allons voir comment faire cela dans une minute.</p>
+<p>Git a tous les commits du dépôt original, mais les branches dans le dépôt distant ne sont pas traitées comme des branches locales ici. Si nous voulons notre propre branche <strong>saluer</strong>, nous devons la créer nous-même. Nous allons voir comment faire cela dans une minute.</p>
   </div>
 
   <div id="index">
@@ -116,8 +115,8 @@
           <li id="lab_30_link" data-lab-id="30"><a href="lab_30.html"><span>30:</span> Résolution des conflits</a></li>
           <li id="lab_31_link" data-lab-id="31"><a href="lab_31.html"><span>31:</span> Rebase VS Fusion (merge)</a></li>
           <li id="lab_32_link" data-lab-id="32"><a href="lab_32.html"><span>32:</span> Réinitialiser la branche Saluer</a></li>
-          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Resetting the Master Branch</a></li>
-          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebasing</a></li>
+          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Réinitialiser la branche Master</a></li>
+          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebaser</a></li>
           <li id="lab_35_link" data-lab-id="35"><a href="lab_35.html"><span>35:</span> Fusionner dans la branche master</a></li>
           <li id="lab_36_link" data-lab-id="36"><a href="lab_36.html"><span>36:</span> Dépôts multiples</a></li>
           <li id="lab_37_link" data-lab-id="37"><a href="lab_37.html"><span>37:</span> Cloner des dépôts</a></li>
