--- a/lab_45.html
+++ b/lab_45.html
@@ -12,7 +12,6 @@
   <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-31474857-1']);
-   _gaq.push(['_setDomainName', 'gitimmersion.fr']);
    _gaq.push(['_trackPageview']);
    (function() {
      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -37,9 +36,9 @@
     <a href="index.html" id="home_link">Git Immersion</a>
     <nav id="pager">
       <a id="arrow_next" class="arrow" href="lab_46.html">Suivant</a>
-
+  
       <a id="arrow_previous" class="arrow" href="lab_44.html">Précédent</a>
-
+  
   <a id="table_of_contents_link" href="#">Table des matières</a>
   <a id="bookmark_link"><span id="bookmark"></span>Mettre en favori cette partie</a>
   <a id="edgecase_link" href="http://edgecase.com" target="_blank">EdgeCase</a>
@@ -56,24 +55,25 @@
 <ul>
 	<li>Apprendre comment ajouter une branche locale qui suit une branche distante.</li>
 </ul>
-<p>Les branches qui commencent avec remotes/origin sont les branches du dépôt original. Notez que nous n&#8217;avons plus une branche appelée greet, mais git sait que le dépôt original has une branche greet.</p>
+<p>Les branches qui commencent avec remotes/origin sont les branches du dépôt original. Notez que nous n&#8217;avons plus une branche appelée saluer, mais git sait que le dépôt original has une branche saluer.</p>
 <h2>Ajouter une branche locale qui permet de suivre une branche distante. <em>01</em></h2>
 <h4>Exécuter:</h4>
-<pre class="instructions">git branch --track greet origin/greet
+<pre class="instructions">git branch --track saluer origin/saluer
 git branch -a
 git hist --max-count=2</pre>
 <h4>En sortie:</h4>
-<pre class="sample">$ git branch --track greet origin/greet
-fatal: Not a valid object name: 'origin/greet'.
+<pre class="sample">$ git branch --track saluer origin/saluer
+Branch saluer set up to track remote branch saluer from origin.
 $ git branch -a
 * master
+  saluer
   remotes/origin/HEAD -&gt; origin/master
   remotes/origin/master
   remotes/origin/saluer
 $ git hist --max-count=2
-* ea0dd90 2012-05-06 | Changement de LISEZMOI dans le dépôt original (HEAD, origin/master, origin/HEAD, master) [Jim Weirich]
-* 62d4c28 2012-05-06 | Ajout d'un LISEZMOI [Jim Weirich]</pre>
-<p>Nous pouvons maintenant voir que la branche greet dans la liste des branches et dans le log.</p>
+* bef3b12 2012-05-07 | Changement de LISEZMOI dans le dépôt original (HEAD, origin/master, origin/HEAD, master) [Jim Weirich]
+* c8f930f 2012-05-07 | Rakefile mis à jour (origin/saluer, saluer) [Jim Weirich]</pre>
+<p>Nous pouvons maintenant voir que la branche saluer dans la liste des branches et dans le log.</p>
   </div>
 
   <div id="index">
@@ -114,8 +114,8 @@ $ git hist --max-count=2
           <li id="lab_30_link" data-lab-id="30"><a href="lab_30.html"><span>30:</span> Résolution des conflits</a></li>
           <li id="lab_31_link" data-lab-id="31"><a href="lab_31.html"><span>31:</span> Rebase VS Fusion (merge)</a></li>
           <li id="lab_32_link" data-lab-id="32"><a href="lab_32.html"><span>32:</span> Réinitialiser la branche Saluer</a></li>
-          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Resetting the Master Branch</a></li>
-          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebasing</a></li>
+          <li id="lab_33_link" data-lab-id="33"><a href="lab_33.html"><span>33:</span> Réinitialiser la branche Master</a></li>
+          <li id="lab_34_link" data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebaser</a></li>
           <li id="lab_35_link" data-lab-id="35"><a href="lab_35.html"><span>35:</span> Fusionner dans la branche master</a></li>
           <li id="lab_36_link" data-lab-id="36"><a href="lab_36.html"><span>36:</span> Dépôts multiples</a></li>
           <li id="lab_37_link" data-lab-id="37"><a href="lab_37.html"><span>37:</span> Cloner des dépôts</a></li>
